// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title handles missing title prop 1`] = `
<h1
  className="sc-bdVaJa bCCRnX"
/>
`;

exports[`Title renders title from prop 1`] = `
<h1
  className="sc-bdVaJa bCCRnX"
>
  Top Gun
</h1>
`;
